Added smaller images for project thumbnails

--- a/programming-projects.html
+++ b/programming-projects.html
@@ -39,11 +39,11 @@
 
     <div class="programming-container">
         <div class="col">
-            <a href="./veqx.html"> <img src="./assets/images/VeQX_Promo_2560x1440.png" alt="VeQX main menu image" /> </a>
+            <a href="./veqx.html"> <img src="./assets/images/VeQX_Promo_960x540.jpg" alt="VeQX thumbnail image." srcset="./assets/images/VeQX_Promo_960x540.jpg 1500w, ./assets/images/VeQX_Promo_634x356.jpg 600w"/> </a>
             <p>VeQX <br/> Unreal Engine 5 - Programmer <br />In charge of gameplay logic, enemy AI, and helping with programming gameplay UI </p>
         </div>
         <div class="col">
-            <a href="./otus.html"> <img src="./assets/images/OTUS_DesaturatedArtistic_1920x1080.png" alt="O.T.U.S. main menu image" /> </a>
+            <a href="./otus.html"> <img src="./assets/images/OTUS_Promo_960x540.jpg" alt="O.T.U.S. thumbnail image." srcset="./assets/images/OTUS_Promo_960x540.jpg 1500w, ./assets/images/OTUS_Promo_634x356.jpg w600" /> </a>
             <p>O.T.U.S.<br/> Unreal Engine 5.2 - Programmer<br /> In charge of gameplay logic, enemy AI, map/save system, and UI</p>
         </div>
     </div>
