External links update and OTUS continued
External links now goes to new tabs instead of opening to current tab.
Internal links work as before.

OTUS explanation started

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 </div>
 
 <div class="container">
-    THIS IS TEMPORARY TEXT ABOUT ME AND STUFF
+    <h1>About Me</h1>
+    <p> I'm a student at <a href="https://www.kamk.fi/en" target="_blank"> KAMK - University of Applied Sciences </a> focusing my studies on game programming.</p>
 </div>
 
 <div class="footer-container">
