--- a/otus.html
+++ b/otus.html
@@ -40,15 +40,19 @@
     <div class="project-container">
         <!-- Add own wrapper here for the content -->
         <h1> Overview </h1>
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, amet sapiente? Cumque autem qui molestias expedita consequatur ex ut tempore. </p>
+        <p> This project was done for the Project Studies course and our team consisted of two additional members:</p>
         <ul>
-            <li> <a href="https://ssmiljass.github.io/"> Ella Santapakka</a> - Student (Producer/Design) </li>
-            <li> <a href="https://hypocritteri.github.io/"> Kalle Tuohimaa</a> - Student (Art/Design) </li>
+            <li> <a href="https://ssmiljass.github.io/" target="_blank"> Ella Santapakka</a> - Student (Producer/Design) </li>
+            <li> <a href="https://hypocritteri.github.io/" target="_blank"> Kalle Tuohimaa</a> - Student (Art/Design) </li>
         </ul>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita ipsa sequi quia soluta voluptatibus ratione rem cupiditate alias dolor eligendi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, libero.</p>
+        <p>The game is a metroidvania-style sidescrolling 2D / 3D hybrid game made in Unreal Engine 5.2. All the characters are presented as sprites while the environment is 3D. In the game you the player play as the O.T.U.S. while trying to get to your destination by finding skills while exploring the space station.</p>
+        <p>My role was to create the main mechanics for the game staying in line with the design. Main problems to tackle were the: </p>
+        <ul>
+            <li>Coming Soon!</li>
+        </ul>
 
         <h2> Gameplay Video </h2>
+        <p> Coming Soon! </p>
 
     </div>
     
