--- a/veqx.html
+++ b/veqx.html
@@ -47,10 +47,10 @@
     <div class="project-container">
         <!-- Add own wrapper here for the content -->
         <h1> Overview </h1>
-        <p> VeQX was created for and during <a href="https://www.kamk.fi/en"> KAMK's</a> Summer Studies course (15 credits) for the purpose of creating additional portfolio piece. The project was created using Unreal Engine 5.1 and our team consisted of me as a programmer and two other members:</p>
+        <p> VeQX was created for and during <a href="https://www.kamk.fi/en" target="_blank"> KAMK's</a> Summer Studies course (15 credits) for the purpose of creating additional portfolio piece. The project was created using Unreal Engine 5.1 and our team consisted of me as a programmer and two other members:</p>
         <ul>
-            <li> <a href="https://ssmiljass.github.io/"> Ella Santapakka</a> - Student (Producer/Design) </li>
-            <li> <a href="https://hypocritteri.github.io/"> Kalle Tuohimaa</a> - Student (Art/Design) </li>
+            <li> <a href="https://ssmiljass.github.io/" target="_blank"> Ella Santapakka</a> - Student (Producer/Design) </li>
+            <li> <a href="https://hypocritteri.github.io/" target="_blank"> Kalle Tuohimaa</a> - Student (Art/Design) </li>
         </ul>
         <p>VeQX is a vertical slice from a game, so instead of having a fully done game we opted to create a singular part which, in this case, would be part of a singular level. We opted to create a 3D version of our old project, which was done during project studies 1 using a different game engine (Unity). </p>
         <p>It’s an on-rail -style space shooter, where the player is continuously moving towards the end goal while being able to have limited movement on screen. Player’s camera view will change between Side, Top down, and Third Person view based on level progress. During progress enemies will spawn and move to formation in front of the player, which player will have to either destroy or get virtually destroyed themselves. To aid them, and to honor our old project, players can pick up powerup(s) that is/are tiered based on amount collected.</p>
