Footer and color/margin changes

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
 <div class="container">
     <h1>About Me</h1>
-    <p> I'm a student at <a href="https://www.kamk.fi/en" target="_blank"> KAMK - University of Applied Sciences </a> focusing my studies on game programming.</p>
+    <p> I'm a student at <a href="https://www.kamk.fi/en" target="_blank"> KAMK - University of Applied Sciences </a> focusing my studies on game programming using Unreal Engine. My current strengths align using C++ allowing me to create performant gameplay solutions.</p>
 </div>
 
 <div class="footer-container">
     <footer>
-    
+    <p> Email:<br>tmmjarvinen@gmail.com</p>
     </footer>
 </div>
 </body>
