--- a/programming-projects.html
+++ b/programming-projects.html
@@ -46,11 +46,15 @@
             <a href="./otus.html"> <img src="./assets/images/OTUS_Promo_960x540.jpg" alt="O.T.U.S. thumbnail image." srcset="./assets/images/OTUS_Promo_960x540.jpg 1500w, ./assets/images/OTUS_Promo_634x356.jpg w600" /> </a>
             <p>O.T.U.S.<br/> Unreal Engine 5.2 - Programmer<br /> In charge of gameplay logic, enemy AI, map/save system, and UI</p>
         </div>
+        <!-- <div class="col">
+            <a href="./otus.html"> <img src="./assets/images/OTUS_Promo_960x540.jpg" alt="O.T.U.S. thumbnail image." srcset="./assets/images/OTUS_Promo_960x540.jpg 1500w, ./assets/images/OTUS_Promo_634x356.jpg w600" /> </a>
+            <p>Mech Mayhem<br/> Unreal Engine 5.1 - Programmer<br /> In charge of gameplay logic, enemy AI, skill system and UI</p>
+        </div> -->
     </div>
 
     <div class="footer-container">
         <footer>
-        
+            <p> Email:<br>tmmjarvinen@gmail.com</p>
         </footer>
     </div>
 </body>
