--- a/otus.html
+++ b/otus.html
@@ -58,7 +58,7 @@
     
     <div class="footer-container">
         <footer>
-        
+            <p> Email:<br>tmmjarvinen@gmail.com</p>
         </footer>
     </div>
 
