--- a/veqx.html
+++ b/veqx.html
@@ -62,7 +62,7 @@
     
     <div class="footer-container">
         <footer>
-        
+            <p> Email:<br>tmmjarvinen@gmail.com</p>
         </footer>
     </div>
 </body>
