Added github icon and link

--- a/otus.html
+++ b/otus.html
@@ -58,6 +58,7 @@
     
     <div class="footer-container">
         <footer>
+            <a href="https://github.com/Prolence" target="_blank"><img src="./assets/images/github-mark-white.svg" alt="Vectorized github logo."> </a>
             <p> Email:<br>tmmjarvinen@gmail.com</p>
         </footer>
     </div>
