Added section to index.html
style.css updated with flex and other alignment handlers

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 <div class="container">
     <h1>About Me</h1>
     <p> I'm a student at <a href="https://www.kamk.fi/en" target="_blank"> KAMK - University of Applied Sciences </a> focusing my studies on game programming using Unreal Engine. My current strengths align using C++ allowing me to create performant gameplay solutions.</p>
+    <h2>Technical</h2>
+    <div class="proficiency-container">
+        <div class="proficiency-column">
+            <p>C++</p>
+            <p>C#</p>
+            <p>Unreal Engine</p>
+            <p>Blender</p>
+            <p>Substance Painter</p>
+            <p>Jira</p>
+        </div>
+    </div>
 </div>
 
 <div class="footer-container">
