Renaming Programming tabs
Programming -> Games

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="logo"> <span class="bold"> <a href="./index.html"> TOMMI JÄRVINEN </a> </span> - Game Programmer </div>
 
         <nav>
-            <a href="./programming-projects.html"> <div class="navbutton"> PROGRAMMING </div> </a>
+            <a href="./programming-projects.html"> <div class="navbutton"> GAMES </div> </a>
             <a href="./under-construction.html"> <div class="navbutton"> 3D </div> </a> 
         </nav>
 
@@ -35,7 +35,7 @@
             <img src="./assets/images/icon-burger-menu.svg" alt="menu icon for mobile mode." class="burgermenu">
 
             <div class="mobile-nav">
-                 <a href="./programming-projects.html"> <div class="mobile-navbutton"> PROGRAMMING </div> </a> 
+                 <a href="./programming-projects.html"> <div class="mobile-navbutton"> GAMES </div> </a> 
                  <a href="./under-construction.html"> <div class="mobile-navbutton"> 3D</div> </a> 
             </div> 
 
