--- a/otus.html
+++ b/otus.html
@@ -21,7 +21,7 @@
             <div class="logo"> <span class="bold"> <a href="./index.html">TOMMI JÄRVINEN </a> </span> - O.T.U.S. </div>
     
             <nav>
-                <a href="./programming-projects.html"> <div class="navbutton"> PROGRAMMING </div> </a>
+                <a href="./programming-projects.html"> <div class="navbutton"> GAMES </div> </a>
                 <a href="./index.html"> <div class="navbutton"> HOME </div> </a> 
             </nav>
 
@@ -29,7 +29,7 @@
                 <img src="./assets/images/icon-burger-menu.svg" alt="menu icon for mobile mode." class="burgermenu">
     
                 <div class="mobile-nav">
-                    <a href="./programming-projects.html"> <div class="mobile-navbutton"> PROGRAMMING </div> </a> 
+                    <a href="./programming-projects.html"> <div class="mobile-navbutton"> GAMES </div> </a> 
                     <a href="./index.html"> <div class="mobile-navbutton"> HOME </div> </a> 
                 </div> 
             </div>
